[package]
name = "gedent"
version = "0.1.0"
authors = ["Vinicius Capriles Port <caprilesport@gmail.com>"]
edition = "2021"
description = "A command-line interface to generate computational chemistry inputs"
repository = "https://github.com/caprilesport/gedent"
license = "MIT"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0", features = ["derive"] }
edit = "0.1.5"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.111"
tera = "1"
toml = "0.8.8"
wild = "2.1.0"
