[package]
name = "gedent"
version = "0.1.0"
authors = ["Vinicius Capriles Port <caprilesport@gmail.com>"]
edition = "2021"
description = "A command-line interface to generate computational chemistry inputs"
repository = "https://github.com/caprilesport/gedent"
license = "MIT"
rust-version = "1.70.0"
keywords = ["chemistry", "cli", "template", "orca", "gaussian"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.4.10"
clap-verbosity-flag = "3"
log = "0.4"
env_logger = "0.11"
dirs = "5.0.1"
edit = "0.1.5"
include_dir = "0.7.3"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.111"
tera = "1"
toml = "0.8.8"
walkdir = "2.4.0"
comfy-table = "7"
